# worldbuildingtools

./: .gitignore  .pylintrc  README.md  autopicin.py  dev  pyproject.toml  pytest.ini  requirements.txt  setup.py
apifast_app/: pyproject.toml
apifast_app/apifast/: config.py  db.py  main.py  mdb.py  model.py
apifast_app/apifast/auth/: jwt.py
apifast_app/apifast/mcp/: character_connections.py  characters.py
apifast_app/apifast/models/: enums.py  model.py
apifast_app/apifast/modules/auth/: router.py  service.py
apifast_app/apifast/routers/: ai.py  auth.py  character_connections.py  characters.py  chat.py  events.py  images.py  partnership_participants.py  partnerships.py
apifast_app/apifast/services/: character_connections.py  characters.py  partnership_participants.py  partnerships.py
apifast_app/tests/: conftest.py  conftest_char_connections.py  test_fastapi_characer_connections.py  test_fastapi_character_api.py  test_fastapi_partnership_api.py  test_mcp.py
flaskr_app/: pyproject.toml
flaskr_app/flaskr/: __init__.py  config.py
flaskr_app/flaskr/blueprints/: images.py
flaskr_app/flaskr/resources/: partners.py  partnership.py
flaskr_app/tests/: conftest.py  test_character_api.py
src/apifast/: config.py  (+1 more)
tests/: conftest.py  conftest_char_connections.py  test_character_api.py  test_create_char_con.py  test_fastapi_characer_connections.py  test_fastapi_character_api.py  test_fastapi_partnership_api.py  test_liaison.py  test_mcp.py  test_something.py  test_stories_api.py
tools/: build_static_pages.py  reconcile.py  splitter.py
wbcr/: config.py
(+77 files in other folders)
