[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "apifast"
version = "0.1.0"
description = "FastAPI implementation of the API"
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlmodel",
    "python-dotenv",
    "alembic",
]

[tool.setuptools.packages.find]
where = ["."]

