[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flaskr"
version = "0.1.0"
description = "Flask implementation of the API"
dependencies = [
    "flask",
    "flask-smorest",
    "sqlalchemy",
    "marshmallow",
    "python-dotenv",
]
[tool.setuptools.packages.find]
where = ["."]
